# chappaai

./: .editorconfig  Justfile  README.md  dagger.cue  package-lock.json
.github/workflows/: release-operator.yaml  release-web.yaml  release.yaml
cue.mod/: module.cue
deploy/: deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
examples/: discord.yaml  github.yaml  youtube.yaml
operator/: .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  build.cue  check.sh  melange.yaml  rustfmt.toml
operator/src/: lib.rs
operator/src/kubernetes/: controller.rs  mod.rs  secrets.rs
operator/src/oauth_api/: api.rs  controller.rs  mod.rs  resource.rs
operator/src/oauth_connection/: api.rs  mod.rs  resource.rs
operator/src/oauth_connection/controller/: connected.rs  disconnected.rs  initializing.rs  manager.rs  mod.rs  none.rs  reconciler.rs
web/: Dockerfile  package-lock.json  package.json  playwright.config.js  rome.json  svelte.config.js  vite.config.js
web/opt/kubernetes/: deployment.yaml
web/src/routes/: +page.server.ts  +page.svelte  index.svelte  services.ts
web/src/routes/oauth/callback/: [connection].svelte
web/src/routes/oauth/callback/[connection]/: +page.server.ts  +page.svelte
