[package]
name = "chappaai"
version = "0.0.2"
edition = "2021"
authors = ["David Flanagan <david@rawkode.dev>"]
default-run = "chappaai"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "chappaai"
path = "src/bin/chappaai.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0.1"
chrono = "0.4.19"
futures = "0.3.21"
oauth2 = "4.1.0"
prometheus = "0.13.0"
schemars = "0.8.8"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tracing = "0.1.32"
tracing-opentelemetry = "0.17.2"
rcgen = "0.9.2"
reqwest = "0.11.11"
actix-cors = "0.6.1"

[dependencies.k8s-openapi]
version = "=0.14.0"
default-features = false
features = ["v1_22"]

[dependencies.kube]
version = "=0.70"
default-features = false
features = ["runtime", "client", "derive"]

[dependencies.kube-client]
version = "0.70.0"
features = ["rustls-tls"]

[dependencies.opentelemetry]
version = "0.17.0"
features = ["trace", "rt-tokio"]

[dependencies.opentelemetry-otlp]
version = "0.10.0"
features = ["tokio"]
optional = true

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.1"
features = ["json", "env-filter"]
